--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>JS + CSS Clock</title>
-</head>
-<body>
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <title>JS + CSS Clock</title>
+  </head>
+  <body>
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
@@ -14,61 +12,101 @@
         <div class="hand second-hand"></div>
       </div>
     </div>
+    <audio id="sec" src="../01 - JavaScript Drum Kit/sounds/boom.wav"></audio>
+    <audio id="min" src="../01 - JavaScript Drum Kit/sounds/snare.wav"></audio>
+    <audio id="hour" src="../01 - JavaScript Drum Kit/sounds/kick.wav"></audio>
 
+    <style>
+      html {
+        background: #018ded url(http://unsplash.it/1500/1000?image=881&blur=50);
+        background-size: cover;
+        font-family: "helvetica neue";
+        text-align: center;
+        font-size: 10px;
+      }
 
-  <style>
-    html {
-      background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
-      background-size: cover;
-      font-family: 'helvetica neue';
-      text-align: center;
-      font-size: 10px;
-    }
+      body {
+        margin: 0;
+        font-size: 2rem;
+        display: flex;
+        flex: 1;
+        min-height: 100vh;
+        align-items: center;
+      }
 
-    body {
-      margin: 0;
-      font-size: 2rem;
-      display: flex;
-      flex: 1;
-      min-height: 100vh;
-      align-items: center;
-    }
+      .clock {
+        width: 30rem;
+        height: 30rem;
+        border: 20px solid white;
+        border-radius: 50%;
+        margin: 100px auto;
+        position: relative;
+        padding: 2rem;
+        box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1), inset 0 0 10px 3px black,
+          inset 0 0 10px black, 0 0 5px 10px rgba(0, 0, 0, 0.2);
+      }
 
-    .clock {
-      width: 30rem;
-      height: 30rem;
-      border: 20px solid white;
-      border-radius: 50%;
-      margin: 50px auto;
-      position: relative;
-      padding: 2rem;
-      box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
-        inset 0 0 0 3px #EFEFEF,
-        inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
-    }
+      .clock-face {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transform: translateY(
+          -3px
+        ); /* account for the height of the clock hands */
+      }
 
-    .clock-face {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
-    }
+      .hand {
+        width: 50%;
+        height: 6px;
+        background: black;
+        position: absolute;
+        top: 50%;
+        transform-origin: 100%;
+        transform: rotate(90deg);
+        transition: all 0.05s;
+        transition-timing-function: cubic-bezier(1, 0.9, 0.35, 2.22);
+      }
+      
+      .hour-hand {
+      }
 
-    .hand {
-      width: 50%;
-      height: 6px;
-      background: black;
-      position: absolute;
-      top: 50%;
-    }
+      .min-hand {
+        opacity: .5;
+      }
 
-  </style>
+      .second-hand {
+        transform: rotate(90deg);
+        height: 1px;
+      }
+    </style>
 
-  <script>
+    <script>
+      const secondHand = document.querySelector(".second-hand");
+      const minuteHand = document.querySelector('.min-hand');
+      const hourHand = document.querySelector('.hour-hand');
 
+      function setDate() {
+        const now = new Date();
+        const seconds = now.getSeconds();
+        const secondsDegrees = ((seconds / 60) * 360 )+ 90;
+        secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+        const secSound = document.querySelector("#sec");
+        // secSound.currentTime = 0;
+        // secSound.play();
 
-  </script>
-</body>
+        console.log(seconds);
+
+        const min = now.getMinutes();
+        const minDegrees = ((min / 60) * 360)+90;
+        minuteHand.style.transform = `rotate(${minDegrees}deg)`;
+        
+        const hour = now.getHours();
+        const hourDegrees = ((hour / 12) * 360)+90;
+        hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+
+      }
+
+      setInterval(setDate, 1000);
+    </script>
+  </body>
 </html>
