--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -1,19 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>HTML5 Canvas</title>
+    <meta charset="UTF-8">
+    <title>HTML5 Canvas</title>
 </head>
-<body>
-<canvas id="draw" width="800" height="800"></canvas>
-<script>
-</script>
 
 <style>
-  html, body {
-    margin: 0;
-  }
+    * {
+        display: absolute;
+    }
 </style>
 
+<body>
+    <canvas id="draw" width="800" height="800"></canvas>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius consectetur fugiat dignissimos et delectus, unde quae sit eligendi, ducimus similique eaque! Eos, vel odio sequi adipisci illum optio aliquam.</div>
+
+
+
+    <script>
+        const canvas = document.querySelector('#draw');
+        const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        ctx.strokeStyle = 'BADA55';
+        ctx.lineJoin = 'round';
+        ctx.lineCap = 'round';
+        ctx.globalCompositeOperation = 'multiply';
+
+
+        let isDrawing = false;
+        let lastX = 0;
+        let lastY = 0;
+        let hue = 200;
+        let saturation = 50;
+        let brightness = 50;
+        let i = 0;
+        let direction = true;
+
+
+
+
+        function draw(e) {
+            if (!isDrawing) return; //stop function when no mouse down
+
+            if (i > 10) {
+                i = 0;
+                hue = Math.floor(Math.random() * 360);
+                console.log(hue);
+            }
+            ctx.strokeStyle = `hsl(${hue}, ${saturation}%, ${brightness}%`;
+            ctx.beginPath();
+            ctx.moveTo(lastX, lastY);
+            ctx.lineTo(e.offsetX, e.offsetY)
+            ctx.stroke();
+            [lastX, lastY] = [e.offsetX, e.offsetY];
+            hue++;
+            if (hue >= 360) {
+                hue = 0;
+            }
+            if (ctx.lineWidth >= 100 || ctx.lineWidth <= 1) {
+                direction = !direction
+            }
+
+            if (direction) {
+                ctx.lineWidth++;
+            } else {
+                ctx.lineWidth--;
+            }
+
+
+
+        }
+        canvas.addEventListener('mousedown', (e) => {
+            isDrawing = true;
+
+            if (direction) {
+                saturation += 1;
+                console.log(saturation);
+            } else {
+                saturation -= 1;
+                console.log(saturation);
+            }
+
+            brightness = Math.ceil(Math.random() * 80 + 20);
+            [lastX, lastY] = [e.offsetX, e.offsetY];
+            i++;
+            console.log(i);
+
+
+        });
+
+        canvas.addEventListener('mousemove', draw)
+        canvas.addEventListener('mouseup', () => isDrawing = false);
+        canvas.addEventListener('mouseout', () => isDrawing = false);
+    </script>
+
+    <style>
+        html,
+        body {
+            margin: 0;
+        }
+    </style>
+
 </body>
+
 </html>
